add OriginAndRootHeightMover